--- a/index.html
+++ b/index.html
@@ -21,12 +21,30 @@
 
     <form id="form-habits">
       <div class="habits">
-        <div class="habit" data-name="run">🏃🏼‍♂️</div>
-        <div class="habit" data-name="water">💧</div>
-        <div class="habit" data-name="activities">💪🏼</div>
-        <div class="habit" data-name="sleep">💤</div>
-        <div class="habit" data-name="read">📰</div>
-        <div class="habit" data-name="food">🥗</div>
+        <div class="habit" data-name="run">
+          🏃🏼‍♂️
+          <p>Caminhada</p>
+        </div>
+        <div class="habit" data-name="water">
+          💧
+          <p>Água</p>
+        </div>
+        <div class="habit" data-name="drink">
+          🔞
+          <p>Sem beber</p>
+        </div>
+        <div class="habit" data-name="sleep">
+          💤
+          <p>Sono</p>
+        </div>
+        <div class="habit" data-name="bet">
+          🎰
+          <p>Sem Apostar</p>
+        </div>
+        <div class="habit" data-name="food">
+          🥗
+          <p>Alimentação</p>
+        </div>
       </div>
 
       <div class="days"></div>
